--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo What's in this directory?
+          echo What is in this directory ?
           ls -a
           
           echo Is Java installed ? 
