--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Step 1 - Checkout the repo
+        uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Step 2 - Run a one-line script
         run: sh ./github-actions-script.sh
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Step 3 - Run a multi-line script
         run: |
           echo Nothing in multi-line script. 
           echo Here is what is in the folder: 
