--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - id: some build
+      - id: some_build
         name: Step 0 - Some Build
         run: echo "Running Some Build"
         shell: bash
