--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,10 @@ on:
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# MULTI JOBS IN THIS FILE
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+
+  build-on-ubuntu:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -41,3 +42,28 @@ jobs:
           echo Nothing in multi-line script. 
           echo Here is what is in the folder: 
           ls -a
+
+
+  build-on-windows:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Step 1 - Checkout the repo
+        uses: actions/checkout@v3
+
+      # Runs a single command with a prebuilt action
+      - name: Step 2 - Setup the JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      # Runs a set of commands using the runners shell
+      - name: Step 3 - Build your code base
+        run: echo "Building your Code Base ... mvn -B package --file pom.xml"
+
+      - name: Step 4 - List environment vars
+        run: env
